--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.demo.amitav.notesapp"
+        applicationId "com.amitav.cleanarchitecture.notesapp"
         minSdk 21
         targetSdk 32
         versionCode 1
